trunk/Archive2/5b/544e9067d14414/output
main.cpp:24:51: error: template-id 'operator[]<>' for 'char& boost::shared_ptr<Buffer>::operator[](std::ptrdiff_t) const' does not match any template declaration
 template <> typename array_access< Buffer >::type boost::shared_ptr<Buffer>::operator[] ( std::ptrdiff_t i ) const
                                                   ^
main.cpp:24:110: note: saw 1 'template<>', need 2 for specializing a member function template
 template <> typename array_access< Buffer >::type boost::shared_ptr<Buffer>::operator[] ( std::ptrdiff_t i ) const
                                                                                                              ^
